# wireguard-network-applet

./: Makefile.am  README.md  configure.ac
control-applet/: Makefile.am  configuration.h  control-applet.c  pipeutil.c  pipeutil.h  wizard.c  wizard.h
data/: Makefile.am  control-applet-wireguard.desktop  org.maemo.Wireguard.schemas  status-applet-wireguard.desktop
debian/: changelog  control  status-area-wireguard.postinst
status-applet/: Makefile.am  status-applet.c
