desktopdir = $(hildonhomedesktopdir)
desktop_DATA = status-applet-wireguard.desktop

controldir = $(controlpaneldesktopdir)
control_DATA = control-applet-wireguard.desktop

icon48_DATA = \
	statusarea_wireguard_enabled.png \
	statusarea_wireguard_disabled.png

icon18_DATA = \
	statusarea_wireguard_connected.png \
	statusarea_wireguard_connecting.png

gconfschemasdir = $(sysconfdir)/gconf/schemas
dist_gconfschemas_DATA = org.maemo.Wireguard.schemas
